--- a/HTML/Css2.html
+++ b/HTML/Css2.html
@@ -1,27 +1,36 @@
 <html lang="en">
 <head>
+        <style>
+    body {background-color: powderblue;}
+    h1   {color: blue;}
+    p    {color: red;}
+    h1 {
+    color: blue;
+    font-family: verdana;
+    font-size: 300%;
+    }
+    p {
+    color: red;
+    font-family: courier;
+    font-size: 160%;
+    }
+    p {
+    border: 2px solid red;
+    padding: 100px; 
+    margin: 50px;
+    }
+</style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Inline Css</h1>
-    <h1 style="color:blue;">Nguyễn Hồng Hiếu - 2121050189</h1>
-
-    <p style="color:red;">tên bên trên màu xanh biển</p>
-    <br>
     <h1>CSS nội bộ</h1>
     <p>Phần Css trong file html và ở phần head</p>
     <br>
-    <h1>CSS bên ngoài</h1>
-    <p>file Css.css</p>
-    <br> 
     <p>Padding xác định khoảng cách giữa văn bản và đường viền</p>
     <br>
     <p>Margin xác định khoảng cách giữa lề bên ngoài và điền viền</p>
-
-
-    
 
 </body>
 </html>
